--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,14 @@
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
-        <!-- section id="downloads">
+        <section id="downloads">
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-      </section -->
+          <!-- a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a -->
+        <a href="https://store.steampowered.com/app/3061330/" class="btn btn-github"><span class="icon"></span>View on Steam</a> 
+      </section>               
       </div>
     </header>
 
