--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       </section>               
       </div>
     </header>
-
+<iframe src="https://store.steampowered.com/widget/3061330/" frameborder="0" width="646" height="190"></iframe>
     <div class="container">
       <section id="main_content">
         {{ content }}
