--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,12 +26,12 @@
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
           <!-- a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a -->
-        <a href="https://store.steampowered.com/app/3061330/" class="btn btn-github"><span class="icon"></span>View on Steam</a> 
+        <!-- a href="https://store.steampowered.com/app/3061330/" class="btn btn-github"><span class="icon"></span>View on Steam</a --> 
       </section>               
       </div>
     </header>
-<iframe src="https://store.steampowered.com/widget/3061330/" frameborder="0" width="646" height="190"></iframe>
     <div class="container">
+      <iframe src="https://store.steampowered.com/widget/3061330/" frameborder="0" width="646" height="190"></iframe>
       <section id="main_content">
         {{ content }}
       </section>
